aligned center-mistake corrected

--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,17 @@ justify-content: center;
     font-size: 14px;
     margin-left: 5px;
 }
-
+.stps{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.stp{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 100px;
+}
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px,350px));
